force-app/main/default/objects/Artist_Statement_Line_Item_Expense__c/Artist_Statement_Line_Item_Expense__c.object-meta.xml
<CustomObject>
    <description>A Custom object to contain details of Line Item Expenses</description>
    <label>Artist Statement Line Item Expense</label>
    <nameField>
        <label>Artist Statement Line Item Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artist Statement Line Item Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>