force-app/main/default/objects/Artist_Statement_Line_Item_Expense__c/fields/Artist_Statement__c.field-meta.xml
<CustomField>
    <fullName>Artist_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Artist Statement this Expense is related to</inlineHelpText>
    <label>Artist Statement</label>
    <referenceTo>Artist_Statement__c</referenceTo>
    <relationshipLabel>Artist Statement Line Item Expenses</relationshipLabel>
    <relationshipName>Artist_Statement_Line_Item_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>