force-app/main/default/objects/Artist_Statement_Line_Item_Expense__c/fields/Artist_Statement_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Artist_Statement_Line_Item__c</fullName>
    <label>Artist Statement Line Item</label>
    <referenceTo>Artist_Statement_Line_Item__c</referenceTo>
    <relationshipLabel>Artist Statement Line Item Expenses</relationshipLabel>
    <relationshipName>Artist_Statement_Line_Item_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>