force-app/main/default/objects/Artist_Statement_Line_Item_Expense__c/fields/Matching_Number__c.field-meta.xml
<CustomField>
    <fullName>Matching_Number__c</fullName>
    <description>Used to match the Expense to the Line item when looping in Flows</description>
    <label>Matching Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>