force-app/main/default/objects/Artist_Statement_Line_Item_Expense__c/fields/Paid_by_VE__c.field-meta.xml
<CustomField>
    <fullName>Paid_by_VE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The box is checked if the expense is paid by Vocal Events and not the artist</inlineHelpText>
    <label>Paid by VE</label>
    <type>Checkbox</type>
</CustomField>